--- a/JammaLib/JammaLib.vcxproj.filters
+++ b/JammaLib/JammaLib.vcxproj.filters
@@ -57,6 +57,9 @@
     <Filter Include="lib\rtaudio\include">
       <UniqueIdentifier>{90d7c2ab-66cd-4315-9941-6c651a0af991}</UniqueIdentifier>
     </Filter>
+    <Filter Include="lib\stb">
+      <UniqueIdentifier>{8c0a127c-8f8e-41fe-9d45-94e9a2c6327f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\stdafx.h">
@@ -368,6 +371,12 @@
     <ClInclude Include="src\actions\DelayedAction.h">
       <Filter>src\actions</Filter>
     </ClInclude>
+    <ClInclude Include="lib\stb\stb_image_write.h">
+      <Filter>lib\stb</Filter>
+    </ClInclude>
+    <ClInclude Include="src\utils\VecUtils.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\glew\glew.c">
@@ -555,6 +564,9 @@
     </ClCompile>
     <ClCompile Include="src\actions\DelayedAction.cpp">
       <Filter>src\actions</Filter>
+    </ClCompile>
+    <ClCompile Include="src\utils\VecUtils.cpp">
+      <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
