--- a/JammaLib/JammaLib.vcxproj.filters
+++ b/JammaLib/JammaLib.vcxproj.filters
@@ -377,6 +377,12 @@
     <ClInclude Include="src\utils\VecUtils.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="src\gui\GuiSelector.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="src\base\Tweakable.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\glew\glew.c">
@@ -566,6 +572,9 @@
       <Filter>src\actions</Filter>
     </ClCompile>
     <ClCompile Include="src\utils\VecUtils.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\gui\GuiSelector.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
