--- a/Jamma/Jamma.vcxproj.filters
+++ b/Jamma/Jamma.vcxproj.filters
@@ -140,5 +140,17 @@
     <None Include="resources\shaders\picker.vert">
       <Filter>resources\shaders</Filter>
     </None>
+    <None Include="resources\shaders\blur.frag">
+      <Filter>resources\shaders</Filter>
+    </None>
+    <None Include="resources\shaders\blur.vert">
+      <Filter>resources\shaders</Filter>
+    </None>
+    <None Include="resources\shaders\white.frag">
+      <Filter>resources\shaders</Filter>
+    </None>
+    <None Include="resources\shaders\white.vert">
+      <Filter>resources\shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
