--- a/Jamma/Jamma.vcxproj.filters
+++ b/Jamma/Jamma.vcxproj.filters
@@ -172,5 +172,41 @@
     <Image Include="resources\textures\router.tga">
       <Filter>resources\textures</Filter>
     </Image>
+    <Image Include="resources\textures\arrow2_over.tga">
+      <Filter>resources\textures</Filter>
+    </Image>
+    <Image Include="resources\textures\arrow.tga">
+      <Filter>resources\textures</Filter>
+    </Image>
+    <Image Include="resources\textures\arrow_down.tga">
+      <Filter>resources\textures</Filter>
+    </Image>
+    <Image Include="resources\textures\arrow_over.tga">
+      <Filter>resources\textures</Filter>
+    </Image>
+    <Image Include="resources\textures\arrow2.tga">
+      <Filter>resources\textures</Filter>
+    </Image>
+    <Image Include="resources\textures\arrow2_down.tga">
+      <Filter>resources\textures</Filter>
+    </Image>
+    <Image Include="resources\textures\arrowup.tga">
+      <Filter>resources\textures</Filter>
+    </Image>
+    <Image Include="resources\textures\arrowup_down.tga">
+      <Filter>resources\textures</Filter>
+    </Image>
+    <Image Include="resources\textures\arrowup_over.tga">
+      <Filter>resources\textures</Filter>
+    </Image>
+    <Image Include="resources\textures\arrowup2.tga">
+      <Filter>resources\textures</Filter>
+    </Image>
+    <Image Include="resources\textures\arrowup2_down.tga">
+      <Filter>resources\textures</Filter>
+    </Image>
+    <Image Include="resources\textures\arrowup2_over.tga">
+      <Filter>resources\textures</Filter>
+    </Image>
   </ItemGroup>
 </Project>
